Implemented JWT authentication and user-specific transactions